# tasknode-server

./: Dockerfile  README.md  app.py  constants.py  database.py  entrypoint.sh  exceptions.py  manage.py  package-lock.json  package.json  pyproject.toml  run_local.sh  serverless.yml
alembic/: env.py
alembic/versions/: 9215bb47a05c_add_file_type_to_job_files.py  abb745357a1c_add_job_files_table.py  babbe34938f9_add_user_id_to_jobs_table.py  ccf63450ffc1_add_jobs_and_users.py  d98166c1dda2_add_runtime_and_removal_columns.py  e3d02a8e5b1a_update_fargate_task_arn_column_to_.py  e5acf335b645_add_fargate_arn.py
api/v1/: chat.py  jobs.py  users.py
api/v1/tests/: test_app_routes.py
config/: default.py  development.py  local.py  production.py  test.py
models/: __init__.py  job_models.py  user_models.py
models/tests/: test_foo_models.py
scripts/: container_deploy.sh  generate_serverless_config.py
services/: cleanup_s3.py  file_processor.py
test/: generate_urls.py  run_local.sh
triggered_events/: handle_file_drop.py  user_signup.py
utils/: auth.py  email.py  logger.py  s3.py  test_utils.py  utils.py
utils/types/: doc_fields.py
