[project]
name = "tasknode"
version = "0.0.0"
description = "Tasknode Server"
authors = [
    {name = "Daniel Newman", email = "me@dtnewman.com"},
]
requires-python = ">=3.10"
dependencies = [
    "alembic==1.11.0",
    "boto3==1.34.48",
    "email-validator==2.2.0",
    "fastapi==0.110.0",
    "mangum==0.17.0",
    "pytest==7.3.1",
    "pytest-env==0.8.1",
    "pytest-cov==4.1.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "pyjwt==2.10.1",
    "resend==2.4.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.22.0",
    "cryptography==44.0.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
env = [
    "env=Test"
]
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
omit = ["config/*"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
